# c-mdn-logger

./: CMakeLists.txt  CMakePresets.json
cmake/: utils.cmake
src/: CMakeLists.txt
src/logger/: CMakeLists.txt  logger.c
src/logger/include/: logger.h
src/logger/include/mdn/: logger.h
test/: CMakeLists.txt
test/logger_test/: CMakeLists.txt  logger_test.cpp
